# regional_workflow

./: CMakeLists.txt  Externals.cfg  LICENSE.md  NEMSfv3gfs_submodules.cfg  README.md  exregional_make_lbcs.sh  setup  update_fork.pl
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE
conf/: aqm.externals.cfg  fcst_model.cfg
ecf/: drive_fv3sar.xml  run_fv3sar.sh
jobs/: ALT_GEN_PARA  JFV3CAM_NEST_CHGRES  JFV3CAM_NEST_CLEANUP  JFV3CAM_NEST_ENVIR  JFV3CAM_NEST_FCST  JFV3CAM_NEST_POST  JFV3CAM_NEST_POST_GOES  JFV3CAM_NEST_RHIST  JFV3CAM_NEST_SENDPOST_FFAIR  JFV3CAM_NEST_SENDPOST_GOES  JFV3CAM_SAR_CHGRES_FCSTBNDY  JFV3CAM_SAR_CHGRES_FIRSTGUESS  JFV3CAM_SAR_CLEANUP  JFV3CAM_SAR_ENVIR  JFV3CAM_SAR_FCST  JFV3CAM_SAR_FCST_FIRSTGUESS  JFV3CAM_SAR_GSIANL  JFV3CAM_SAR_GSIANL_FIRSTGUESS  JFV3CAM_SAR_POST  JFV3CAM_SAR_POST_FIRSTGUESS  JFV3CAM_SAR_POST_GOES  JFV3CAM_SAR_RHIST  JFV3CAM_SAR_SENDINIBC  JFV3CAM_SAR_SENDPOST  JFV3CAM_SAR_SENDPOST_GOES  JFV3CAM_SAR_SFC_CLIMO  JFV3SAR_CHGRES_FCSTBNDY  JFV3SAR_CHGRES_FIRSTGUESS  JFV3SAR_CLEANUP  JFV3SAR_ENVIR  JFV3SAR_FCST  JFV3SAR_FCST_FIRSTGUESS  JFV3SAR_GSIANL  JFV3SAR_GSIANL_FIRSTGUESS  JFV3SAR_POST  JFV3SAR_POST_FIRSTGUESS  JFV3SAR_RHIST  JFV3SAR_SCRUB  JNEST_ARCHIVE  JNEST_CLEANUP  (+48 more)
modulefiles/: cheyenne.default  module-setup.csh.inc  module-setup.sh.inc
parm/: diag_table.tmp  diag_table_da_hourly.tmp  diag_table_firstguess.tmp  diag_table_tmp  fv3sar_satinfo.txt  input.nml_firstguess  input.nml_firstguess_writecomp  input.nml_gsianl_da_hourly  input.nml_gsianl_da_hourly_writecomp  input.nml_gsianl_writecomp  input_global.nml  input_nest.nml  input_sar.nml  input_sar.nml_template  input_sar_ak.nml  input_sar_brzse.nml  input_sar_conus.nml  input_sar_conus_ccpp.nml  input_sar_da.nml  input_sar_da_hourly.nml  (+29 more)
sorc/fvcom_to_FV3/: CMakeLists.txt
sorc/global_equiv_resol.fd/: CMakeLists.txt  Makefile_dell_p3  global_equiv_resol.f90
sorc/mosaic_file.fd/: CMakeLists.txt  Makefile
sorc/regional_grid.fd/: CMakeLists.txt  Makefile_cheyenne  Makefile_dell_p3  Makefile_hera  compile.sh
(+1079 files in other folders)
